--- a/Stor.html
+++ b/Stor.html
@@ -35,13 +35,117 @@
         <div class="ourteam-heading">
             <h2 class="heading">STORE</h2>
         </div>
-        <div class="store-gallery" style="display: flex; flex-wrap: wrap; gap: 100px; justify-content: center; margin-top: 40px;">
-            <img src="images/pic15.png" alt="pic15" style="width: 200px; border-radius: 18px; box-shadow: 0 2px 12px rgba(0,0,0,0.00);">
-            <img src="images/pic16.png" alt="pic16" style="width: 200px; border-radius: 18px; box-shadow: 0 2px 12px rgba(0,0,0,0.00);">
-            <img src="images/pic17.png" alt="pic17" style="width: 200px; border-radius: 18px; box-shadow: 0 2px 12px rgba(0,0,0,0.00);">
-            <img src="images/pic18.png" alt="pic18" style="width: 200px; border-radius: 18px; box-shadow: 0 2px 12px rgba(0,0,0,0.00);">
-            <img src="images/pic19.png" alt="pic19" style="width: 200px; border-radius: 18px; box-shadow: 0 2px 12px rgba(0,0,0,0.00);">
+        <div class="store-gallery">
+            <div class="store-item">
+                <img src="images/pic15.png" alt="Product 1">
+                <div class="product-name">Lorem Ipsum Product</div>
+                <div class="product-price">50DT</div>
+                <button class="buy-btn">BUY</button>
+            </div>
+            <div class="store-item">
+                <img src="images/pic16.png" alt="Product 2">
+                <div class="product-name">Lorem Ipsum Product</div>
+                <div class="product-price">50DT</div>
+                <button class="buy-btn">BUY</button>
+            </div>
+            <div class="store-item">
+                <img src="images/pic17.png" alt="Product 3">
+                <div class="product-name">Lorem Ipsum Product</div>
+                <div class="product-price">50DT</div>
+                <button class="buy-btn">BUY</button>
+            </div>
+            <div class="store-item">
+                <img src="images/pic18.png" alt="Product 4">
+                <div class="product-name">Lorem Ipsum Product</div>
+                <div class="product-price">50DT</div>
+                <button class="buy-btn">BUY</button>
+            </div>
+            <div class="store-item">
+                <img src="images/pic19.png" alt="Product 5">
+                <div class="product-name">Lorem Ipsum Product</div>
+                <div class="product-price">50DT</div>
+                <button class="buy-btn">BUY</button>
+            </div>
         </div>
+        <style>
+        .store-gallery {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+            gap: 32px;
+            justify-items: center;
+            margin: 40px 0 0 0;
+        }
+        .store-item {
+            background: #fff;
+            border-radius: 22px;
+            box-shadow: 0 6px 32px rgba(40,167,69,0.10), 0 1.5px 6px rgba(0,0,0,0.06);
+            border: 1.5px solid #e6e6e6;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 28px 18px 24px 18px;
+            transition: transform 0.22s, box-shadow 0.22s, border 0.22s;
+            width: 100%;
+            max-width: 270px;
+        }
+        .store-item:hover {
+            transform: translateY(-10px) scale(1.04);
+            box-shadow: 0 12px 40px rgba(40,167,69,0.18), 0 2px 8px rgba(0,0,0,0.10);
+            border: 1.5px solid #28a745;
+        }
+        .store-item img {
+            width: 180px;
+            height: 180px;
+            object-fit: cover;
+            border-radius: 14px;
+            margin-bottom: 18px;
+            box-shadow: 0 2px 12px rgba(40,167,69,0.07);
+        }
+        .product-name {
+            font-size: 1.15rem;
+            font-weight: 700;
+            color: #222;
+            margin-bottom: 10px;
+            text-align: center;
+            letter-spacing: 0.01em;
+        }
+        .product-price {
+            color: #28a745;
+            font-size: 1.08rem;
+            font-weight: 600;
+            text-align: center;
+            margin-bottom: 18px;
+        }
+        .buy-btn {
+            background: linear-gradient(90deg, #28a745 60%, #43e97b 100%);
+            color: #fff;
+            border: none;
+            border-radius: 8px;
+            padding: 12px 38px;
+            font-size: 1.08rem;
+            font-weight: 700;
+            cursor: pointer;
+            margin-top: 6px;
+            box-shadow: 0 2px 8px rgba(40,167,69,0.13);
+            letter-spacing: 0.04em;
+            transition: background 0.18s, box-shadow 0.18s, transform 0.18s;
+        }
+        .buy-btn:hover {
+            background: linear-gradient(90deg, #218838 60%, #43e97b 100%);
+            box-shadow: 0 4px 16px rgba(40,167,69,0.22);
+            transform: scale(1.06);
+        }
+        @media (max-width: 600px) {
+            .store-item img {
+                width: 100%;
+                height: auto;
+            }
+            .store-item {
+                max-width: 100%;
+                padding: 16px 8px 16px 8px;
+            }
+        }
+        </style>
     </section>
 
         <!-- footer design -->
