--- a/Contact.html
+++ b/Contact.html
@@ -31,8 +31,99 @@
         </nav>
     </header>
 
-    
-    <section class="gallery-page">
-        <div class="ourteam-heading">
-            <h2 class="heading">CONTACT</h2>
-        </div>
+    <!-- Contact Us Section -->
+    <section id="contact" class="contact-section-semi">
+      <h2 class="contact-title">Contact Us</h2>
+      <form action="#" method="post" class="contact-form-semi">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" required>
+
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="message">Message</label>
+        <textarea id="message" name="message" rows="4" required></textarea>
+
+        <button type="submit">Send</button>
+      </form>
+    </section>
+    <style>
+    .contact-section-semi {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 48px 0 32px 0;
+      background: transparent;
+    }
+    .contact-title {
+      color: #28a745;
+      font-size: 1.3rem;
+      font-weight: 700;
+      margin-bottom: 18px;
+      letter-spacing: 0.5px;
+    }
+    .contact-form-semi {
+      display: flex;
+      flex-direction: column;
+      gap: 14px;
+      padding: 24px 18px 18px 18px;
+      border-radius: 16px;
+      max-width: 370px;
+      width: 100%;
+      background: rgba(255, 255, 255, 0.7);
+      border: 1.5px solid #28a74544;
+      box-shadow: 0 4px 24px rgba(40,167,69,0.08);
+      backdrop-filter: blur(2px);
+    }
+    .contact-form-semi label {
+      font-weight: 600;
+      color: #28a745;
+      font-size: 0.98rem;
+      margin-bottom: 2px;
+    }
+    .contact-form-semi input,
+    .contact-form-semi textarea {
+      padding: 8px 12px;
+      border-radius: 8px;
+      border: 1.2px solid #28a745;
+      font-size: 0.95rem;
+      background: transparent;
+      color: #222;
+      margin-bottom: 2px;
+      transition: border 0.2s, box-shadow 0.2s;
+      outline: none;
+    }
+    .contact-form-semi input:focus,
+    .contact-form-semi textarea:focus {
+      border: 1.5px solid #43e97b;
+      box-shadow: 0 0 0 2px #43e97b33;
+    }
+    .contact-form-semi button {
+      background: linear-gradient(90deg, #28a745 60%, #43e97b 100%);
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      padding: 12px 0;
+      font-size: 1rem;
+      font-weight: 700;
+      cursor: pointer;
+      margin-top: 8px;
+      box-shadow: 0 2px 12px rgba(40,167,69,0.13);
+      transition: background 0.18s, box-shadow 0.18s, transform 0.18s;
+    }
+    .contact-form-semi button:hover {
+      background: linear-gradient(90deg, #218838 60%, #43e97b 100%);
+      box-shadow: 0 4px 18px rgba(40,167,69,0.22);
+      transform: scale(1.03);
+    }
+    @media (max-width: 600px) {
+      .contact-form-semi {
+        padding: 12px 0 8px 0;
+        max-width: 98vw;
+      }
+    }
+    </style>
+</body>
+</html>
