--- a/About Us.html
+++ b/About Us.html
@@ -35,4 +35,7 @@
     <section class="gallery-page">
         <div class="ourteam-heading">
             <h2 class="heading">ABOUT US</h2>
+            <p class="aboutus-description" style="margin-top: 16px; font-size: 3.30rem; color: #ffffff; text-align: center; max-width: 800x; margin-left: auto; margin-right: auto;">
+                At STORE OVER PAWER, we believe in more than just fashion – we believe in community, creativity, and empowerment. Join us and be part of a movement that values individuality and ambition. Whether you’re a trendsetter, a creator, or simply passionate about our vision, we welcome you to our family. Let’s grow and inspire together!
+            </p>
         </div>
