--- a/faq.html
+++ b/faq.html
@@ -47,82 +47,81 @@
             <h2 class="heading"><span>Frequently</span> Asked Questions</h2>
         </div>
         <div class="faq-container">
-
             <div class="faq-question">
                 <div class="question">
-                    <h3>1. What makes us different from other servers?</h3>
+                    <h3>1. What is Over Power?</h3>
                     <svg width="15" height="10" viewBox="0 0 42 25">
                         <path d="M3 3 L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"></path>
                     </svg>
                 </div>
                 <div class="answer">
-                    <p>The difference is that we are not just a <span>default framework</span>, but we use unique custom scripts. Also, everything on the server is made with great passion and you can see that when you come to play with us.</p>
+                    <p>Over Power is a streetwear brand that represents strength, confidence, and bold identity. We offer unique clothing designed to make you stand out.</p>
                 </div>
             </div>
             <div class="faq-question">
                 <div class="question">
-                    <h3>2. Is the server whitelist?</h3>
+                    <h3>2. How can I place an order?</h3>
                     <svg width="15" height="10" viewBox="0 0 42 25">
                         <path d="M3 3 L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"></path>
                     </svg>
                 </div>
                 <div class="answer">
-                    <p>Yes, the server is whitelist and you must be at least 16 years old to play (of course, there are exceptions).</p>
+                    <p>You can order directly through our website. Just select your product, choose your size, and complete the checkout process.</p>
                 </div>
             </div>
             <div class="faq-question">
                 <div class="question">
-                    <h3>3. How can I get whitelist?</h3>
+                    <h3>3. Do you ship internationally?</h3>
                     <svg width="15" height="10" viewBox="0 0 42 25">
                         <path d="M3 3 L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"></path>
                     </svg>
                 </div>
                 <div class="answer">
-                    <p>You need to join our <a href="https://discord.gg/Pbfcp5v7" target="_blank">Discord</a> and fill out a written application in the <span>"whitelist"</span> channel or wait for a voice interview in <span>"Waiting Room"</span>.</p>
+                    <p>Yes, we offer worldwide shipping. Shipping fees and delivery time vary depending on your location.</p>
                 </div>
             </div>
             <div class="faq-question">
                 <div class="question">
-                    <h3>4. How can I contact an admin if I have a problem?</h3>
+                    <h3>4. How long does delivery take?</h3>
                     <svg width="15" height="10" viewBox="0 0 42 25">
                         <path d="M3 3 L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"></path>
                     </svg>
                 </div>
                 <div class="answer">
-                    <p>If you have a question or need help, you can open a ticket from the <span>"ticket"</span> channel or join and wait for one of us in the <span>"Waiting"</span> channel. Please provide as much information as possible about your problem so we can resolve it more easily.</p>
+                    <p>Local orders take 2–5 business days. International orders may take 7–14 days depending on the country.</p>
                 </div>
             </div>
             <div class="faq-question">
                 <div class="question">
-                    <h3>5. What jobs can I do on the server?</h3>
+                    <h3>5. Can I return or exchange a product?</h3>
                     <svg width="15" height="10" viewBox="0 0 42 25">
                         <path d="M3 3 L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"></path>
                     </svg>
                 </div>
                 <div class="answer">
-                    <p>You have a wide choice of online jobs. There are restaurants, two car services, a hospital, police, municipality, car dealership, and pawn shop. Each of these professions is made with unique scripts you may not have seen anywhere else!</p>
+                    <p>Yes, returns and exchanges are accepted within 14 days of delivery. The item must be in original condition. Contact our support for help.</p>
                 </div>
             </div>
             <div class="faq-question">
                 <div class="question">
-                    <h3>6. Where can I buy a car?</h3>
+                    <h3>6. How can I join the Over Power team?</h3>
                     <svg width="15" height="10" viewBox="0 0 42 25">
                         <path d="M3 3 L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"></path>
                     </svg>
                 </div>
                 <div class="answer">
-                    <p>The server has two car dealerships where you can buy a car. From one you can get a Chinese car (GTA 5 vanilla car), and from the other a branded car. You also have the option to buy a car with bitcoin (real money). To buy a car with bitcoin, check the catalog of available cars and then open a ticket stating which car you want to buy, and we will explain where to send the money for the car.</p>
+                    <p>You can apply through our JOIN US page. We’re always looking for ambassadors, models, and creatives who believe in our message.</p>
                 </div>
             </div>
             <div class="faq-question">
                 <div class="question">
-                    <h3>7. How can I buy a house or apartment?</h3>
+                    <h3>7. How can I contact support?</h3>
                     <svg width="15" height="10" viewBox="0 0 42 25">
                         <path d="M3 3 L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"></path>
                     </svg>
                 </div>
                 <div class="answer">
-                    <p>You can see the available houses on the map, and if there are none, you can go to the municipality and submit an application for a private property of your choice.</p>
+                    <p>You can contact us via the Contact Us page or email us at: <a href="mailto:support@overpowerstore.com">support@overpowerstore.com</a></p>
                 </div>
             </div>
         </div>
